--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>NUEVO</title>
+  <title>SPECIAL PRICES</title>
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Syne:wght@800&display=swap");
 
