--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SPECIAL PRICES</title>
+  <title>NUEVO</title>
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Syne:wght@800&display=swap");
+
+    html {
+      -webkit-text-size-adjust: 100%;
+      text-size-adjust: 100%;
+    }
 
     :root {
       --fg: #fff8e8;
       --accent: #ffd36a;
       --enter-y: 24px;
-      --enter-scale: 0.88;
-      --enter-rotate: -4deg;
-      --peak-rotate: 1.5deg;
-      --exit-scale: 1.05;
-      --shift-x: 0px;
+      --enter-scale: 0.94;
+      --exit-scale: 1.03;
+      --offset-x: 0px;
     }
 
     * {
@@ -39,77 +42,114 @@
     }
 
     .poster {
-      position: relative;
-      display: inline-block;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: auto;
       max-width: 100%;
-      white-space: nowrap;
+      margin-inline: auto;
       line-height: 1;
-      padding-inline: 0.05em 0.1em;
-      font-size: clamp(3rem, 16vw, 10rem);
+      font-size: clamp(0.64rem, 2.9vw, 1.12rem);
       font-weight: 800;
-      letter-spacing: 0.22em;
-      color: transparent;
+      letter-spacing: 0.006em;
       text-transform: uppercase;
-      background: linear-gradient(90deg, #fff, var(--accent), var(--fg), #fff);
-      background-size: 220% 100%;
-      -webkit-background-clip: text;
-      background-clip: text;
-      -webkit-text-stroke: 1px rgba(255, 248, 232, 0.65);
-      text-shadow: 0 0 10px rgba(255, 211, 106, 0.12);
+      color: var(--fg);
+      text-align: center;
       opacity: 0;
-      transform: translateX(var(--shift-x)) translateY(var(--enter-y)) scale(var(--enter-scale)) rotate(var(--enter-rotate));
+      transform: translateX(var(--offset-x)) translateY(var(--enter-y)) scale(var(--enter-scale));
       animation: cinematicIn 2.8s cubic-bezier(0.2, 0.8, 0.15, 1) forwards;
-      will-change: transform, opacity, background-position;
+      will-change: transform, opacity;
+    }
+
+    .poster span {
+      display: block;
+      white-space: nowrap;
+      text-align: center;
+      color: var(--fg);
+      text-shadow: 0 0 6px rgba(255, 211, 106, 0.08);
+    }
+
+    .poster .small {
+      margin-top: 0.18em;
+      font-size: 0.78em;
+      letter-spacing: 0.01em;
     }
 
     @keyframes cinematicIn {
       0% {
         opacity: 0;
-        transform: translateX(var(--shift-x)) translateY(var(--enter-y)) scale(var(--enter-scale)) rotate(var(--enter-rotate));
-        background-position: 0% 50%;
+        transform: translateX(var(--offset-x)) translateY(var(--enter-y)) scale(var(--enter-scale));
       }
       20% {
         opacity: 1;
-        transform: translateX(var(--shift-x)) translateY(0) scale(1.03) rotate(var(--peak-rotate));
+        transform: translateX(var(--offset-x)) translateY(0) scale(1.01);
       }
       40% {
-        transform: translateX(var(--shift-x)) translateY(0) scale(1) rotate(0deg);
-        background-position: 100% 50%;
+        transform: translateX(var(--offset-x)) translateY(0) scale(1);
       }
       82% {
         opacity: 1;
-        transform: translateX(var(--shift-x)) scale(1);
+        transform: translateX(var(--offset-x)) scale(1);
       }
       100% {
         opacity: 0;
-        transform: translateX(var(--shift-x)) scale(var(--exit-scale));
+        transform: translateX(var(--offset-x)) scale(var(--exit-scale));
       }
     }
 
-    @media (max-width: 600px) {
+    @media (max-width: 1024px) {
       :root {
-        --enter-y: 16px;
-        --enter-scale: 0.93;
-        --enter-rotate: -1deg;
-        --peak-rotate: 0deg;
-        --exit-scale: 1.01;
-        --shift-x: -8px;
+        --enter-y: 8px;
+        --enter-scale: 1;
+        --exit-scale: 1;
+        --offset-x: 0px;
+      }
+
+      body {
+        padding: 12px;
+        padding-top: max(12px, env(safe-area-inset-top));
+        padding-right: max(12px, env(safe-area-inset-right));
+        padding-bottom: max(12px, env(safe-area-inset-bottom));
+        padding-left: max(12px, env(safe-area-inset-left));
       }
 
       .poster {
-        font-size: clamp(2.1rem, 15vw, 4.8rem);
-        letter-spacing: 0.1em;
-        padding-inline: 0.04em 0.14em;
-        -webkit-text-stroke: 0.8px rgba(255, 248, 232, 0.65);
+        max-width: calc(100vw - 24px);
+        font-size: clamp(0.5rem, 2.7vw, 0.78rem) !important;
+        letter-spacing: 0em !important;
+        line-height: 1.1;
+      }
+
+      .poster .small {
+        font-size: 0.82em;
+        letter-spacing: 0em;
+      }
+    }
+
+    @media (max-width: 430px) {
+      .poster {
+        max-width: calc(100vw - 20px);
+        font-size: clamp(0.35rem, 2.4vw, 0.62rem) !important;
+        letter-spacing: 0em !important;
+      }
+
+      .poster .small {
+        font-size: 0.86em;
+        letter-spacing: 0em;
       }
     }
   </style>
 </head>
 <body>
-  <h1 style="text-align: center;" class="poster" id="poster">SPECIAL <br>PRICES<br> <br>HASTA<br> <br>-40%<br></h1>
+  <h1 class="poster" id="poster" aria-label="SPECIAL PRICES HASTA -40%">
+    <span>SPECIAL</span>
+    <span>PRICES</span>
+    <span class="small">HASTA -40%</span>
+  </h1>
 
   <script>
-    const targetUrl = "https://www.yelloworiginal.com/colecciones/special-prices";
+    const targetUrl = "https://www.yelloworiginal.com/colecciones/nuevo";
     const poster = document.getElementById("poster");
     let redirected = false;
 
