--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SPECIAL PRICES</title>
+  <title>NUEVO</title>
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Syne:wght@800&display=swap");
 
     html {
-      -webkit-text-size-adjust: 100%;
-      text-size-adjust: 100%;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      text-rendering: geometricPrecision;
     }
 
     :root {
       --fg: #ffd046;
-      --accent: #ffdf7a;
-      --enter-y: 34px;
-      --enter-scale: 0.82;
-      --exit-scale: 1.08;
-      --offset-x: 0px;
+      --stroke: #ffdf7a;
+      --enter-y: 24px;
+      --enter-scale: 0.92;
+      --exit-scale: 1.03;
+      --enter-rotate: -12deg;
+      --peak-rotate: 2.8deg;
+      --shift-x: 0px;
     }
 
     * {
@@ -39,162 +42,74 @@
       padding-right: max(16px, env(safe-area-inset-right));
       padding-bottom: max(16px, env(safe-area-inset-bottom));
       padding-left: max(16px, env(safe-area-inset-left));
-      -webkit-font-smoothing: antialiased;
-      text-rendering: geometricPrecision;
     }
 
     .poster {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: auto;
+      position: relative;
+      display: inline-block;
       max-width: 100%;
-      margin-inline: auto;
-      line-height: 1.01;
-      font-size: clamp(2.8rem, 11vw, 6rem);
-      font-weight: 800;
-      letter-spacing: 0.02em;
-      text-transform: uppercase;
-      color: var(--fg);
-      text-align: center;
-      opacity: 0;
-      transform: translateX(var(--offset-x)) translateY(var(--enter-y)) scale(var(--enter-scale));
-      animation: cinematicIn 5.2s cubic-bezier(0.22, 0.7, 0.2, 1) forwards;
-      will-change: transform, opacity;
-    }
-
-    .poster span {
-      display: block;
       white-space: nowrap;
-      text-align: center;
+      line-height: 1;
+      padding-inline: 0.05em 0.1em;
+      font-size: clamp(3rem, 16vw, 10rem);
+      font-weight: 800;
+      letter-spacing: 0.18em;
       color: var(--fg);
-      text-shadow: 0 0 0 rgba(0, 0, 0, 0);
+      text-transform: uppercase;
+      -webkit-text-stroke: 0.9px var(--stroke);
+      text-shadow: none;
       opacity: 0;
-      transform: translateY(24px) scale(0.96);
-      animation: lineIn 5.2s cubic-bezier(0.2, 0.8, 0.2, 1) forwards;
-    }
-
-    .poster .small {
-      margin-top: 0.18em;
-      font-size: 0.52em;
-      letter-spacing: 0.024em;
-    }
-
-    .poster span:nth-child(1) {
-      animation-delay: 0.1s;
-    }
-
-    .poster span:nth-child(2) {
-      animation-delay: 0.45s;
-    }
-
-    .poster span:nth-child(3) {
-      animation-delay: 0.8s;
+      transform: translateX(var(--shift-x)) translateY(var(--enter-y)) scale(var(--enter-scale)) rotate(var(--enter-rotate));
+      animation: cinematicIn 1.4s cubic-bezier(0.2, 0.8, 0.15, 1) forwards;
+      will-change: transform, opacity;
     }
 
     @keyframes cinematicIn {
       0% {
         opacity: 0;
-        transform: translateX(var(--offset-x)) translateY(var(--enter-y)) scale(var(--enter-scale));
+        transform: translateX(var(--shift-x)) translateY(var(--enter-y)) scale(var(--enter-scale)) rotate(var(--enter-rotate));
       }
-      22% {
+      24% {
         opacity: 1;
-        transform: translateX(var(--offset-x)) translateY(0) scale(1.02);
+        transform: translateX(var(--shift-x)) translateY(0) scale(1.03) rotate(var(--peak-rotate));
       }
-      80% {
-        transform: translateX(var(--offset-x)) translateY(0) scale(1);
+      46% {
+        transform: translateX(var(--shift-x)) translateY(0) scale(1) rotate(0deg);
       }
-      92% {
+      82% {
         opacity: 1;
-        transform: translateX(var(--offset-x)) scale(1);
+        transform: translateX(var(--shift-x)) scale(1) rotate(0deg);
       }
       100% {
         opacity: 0;
-        transform: translateX(var(--offset-x)) scale(var(--exit-scale));
+        transform: translateX(var(--shift-x)) scale(var(--exit-scale)) rotate(0deg);
       }
     }
 
-    @keyframes lineIn {
-      0% {
-        opacity: 0;
-        transform: translateY(24px) scale(0.96);
-        color: #f3b81f;
-      }
-      20% {
-        opacity: 1;
-        transform: translateY(0) scale(1);
-        color: var(--accent);
-      }
-      72% {
-        opacity: 1;
-        transform: translateY(0) scale(1);
-        color: var(--fg);
-      }
-      88% {
-        opacity: 1;
-        transform: translateY(0);
-        color: var(--fg);
-      }
-      100% {
-        opacity: 0;
-        transform: translateY(-10px) scale(1.01);
-        color: var(--fg);
-      }
-    }
-
-    @media (max-width: 1024px) {
+    @media (max-width: 600px) {
       :root {
-        --enter-y: 14px;
-        --enter-scale: 0.92;
-        --exit-scale: 1.04;
-        --offset-x: 0px;
-      }
-
-      body {
-        padding: 12px;
-        padding-top: max(12px, env(safe-area-inset-top));
-        padding-right: max(12px, env(safe-area-inset-right));
-        padding-bottom: max(12px, env(safe-area-inset-bottom));
-        padding-left: max(12px, env(safe-area-inset-left));
+        --enter-y: 16px;
+        --enter-scale: 0.96;
+        --exit-scale: 1.01;
+        --enter-rotate: -5deg;
+        --peak-rotate: 0.8deg;
+        --shift-x: -4px;
       }
 
       .poster {
-        max-width: calc(100vw - 24px);
-        font-size: clamp(2.4rem, 13vw, 4.8rem);
-        letter-spacing: 0.016em;
-        line-height: 1.03;
-      }
-
-      .poster .small {
-        font-size: 0.56em;
-        letter-spacing: 0.018em;
-      }
-    }
-
-    @media (max-width: 430px) {
-      .poster {
-        max-width: calc(100vw - 20px);
-        font-size: clamp(2rem, 15vw, 3.8rem);
-        letter-spacing: 0.014em;
-      }
-
-      .poster .small {
-        font-size: 0.58em;
-        letter-spacing: 0.016em;
+        font-size: clamp(2.1rem, 15vw, 4.8rem);
+        letter-spacing: 0.09em;
+        padding-inline: 0.04em 0.14em;
+        -webkit-text-stroke: 0.8px var(--stroke);
       }
     }
   </style>
 </head>
 <body>
-  <h1 class="poster" id="poster" aria-label="SPECIAL PRICES HASTA -40%">
-    <span>SPECIAL</span>
-    <span>PRICES</span>
-    <span class="small">HASTA -40%</span>
-  </h1>
+  <h1 class="poster" id="poster">NUEVO</h1>
 
   <script>
-    const targetUrl = "https://www.yelloworiginal.com/colecciones/special-prices";
+    const targetUrl = "https://www.yelloworiginal.com/colecciones/nuevo";
     const poster = document.getElementById("poster");
     let redirected = false;
 
@@ -205,7 +120,7 @@
     }
 
     poster.addEventListener("animationend", goToTarget);
-    setTimeout(goToTarget, 5600);
+    setTimeout(goToTarget, 1600);
   </script>
 </body>
 </html>
